<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/activity_login_imageView"
            android:contentDescription="@string/activity_login_icon"/>

        <TextView
            android:id="@+id/activity_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/activity_login_btn_text"
            style="@style/AppTheme.TextView.Clickable.2.White"/>

    </LinearLayout>

    <TextView
        android:id="@+id/activity_signUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_signup_btn_text"
        style="@style/AppTheme.TextView.Clickable.2.White"/>

</RelativeLayout>
